# zephyr_eqm

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  LICENSE  prj.conf
boards/: stm32_min_dev_blue.overlay
src/: main.c
src/app/: target_controller.c  target_controller.h
src/driver/: stepper.c  stepper.h
src/infra/: gnss.c  gnss.h
